[package]
name = "file-slicer"
version = "0.1.0"
edition = "2024"

[dependencies]
num-format = "0.4.4"

[[bin]]
name = "file-slicer"
path = "src/bin/slicer.rs"

[[bin]]
name = "file-assembler"
path = "src/bin/assembler.rs"

[profile.release]
codegen-units = 1
lto = "fat"
target-cpu = "native"
opt-level = "z"
panic = "abort"
strip = "symbols"